[tool.poetry]
name = "pystrand"
version = "0.1.0"
description = "Python genetic algorithm package"
authors = ["Jiri Podivin <jpodivin@gmail.com>"]
readme = "README.md"
license = "BSD 3-Clause License"
packages = [{include="pystrand"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
numpy = "^1.23.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
